--- a/public_html/style.css
+++ b/public_html/style.css
@@ -19,7 +19,7 @@ body{
 #menu>a{
     color: black;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     padding: 30px;
     position: relative;
@@ -28,7 +28,7 @@ body{
 }
 
 #pic{    
-    background-image: url('images/jeita.jpg');
+background-image: url('images/jeita.jpg');
     border: solid grey 3px;
     border-radius: 20px;
     width: 1000px;
@@ -194,4 +194,14 @@ td,th{
 }
 thead, tfoot{
     background-color: red;
+}
+#h3{
+    color: black;
+    text-align: center;
+  
+}
+
+#email{
+   text-align: center;
+   font-weight: bold;
 }
